--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+
+    - name: Build & push Docker image
+      uses: georgesilva97/exams-portal
+      with:
+        image: georgesilva97/exams-portal
+        tags: 1.0.1
+        registry: docker.io
+        dockerfile: Dockerfile
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
