--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   exam-portal-container:
-    image: georgesilva97/exams-portal
+    image: georgesilva97/exams-portal:1.0.2
     volumes:
       - /data/exam-portal-container
     ports:
