ec2 file update

--- a/ec2.yml
+++ b/ec2.yml
@@ -1,4 +1,8 @@
 AWSTemplateFormatVersion: 2010-09-09
+
+Configuration:
+  Capabilities: CAPABILITY_NAMED_IAM
+
 Parameters :
   AmiId:
     Type : String
