ec2 file update

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,5 +50,6 @@ jobs:
         name: ec2-exam-portal-stack
         template: ec2.yml
         no-fail-on-empty-changeset: "1"
+        capabilities: CAPABILITY_NAMED_IAM
 
 
