--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -14,6 +14,7 @@ spring:
         web-allow-others: true
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    generate-ddl : true
 
 
 info:
