--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     </parent>
     <groupId>com.sre.exercise</groupId>
     <artifactId>userEntity.registration</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>Online Exam Registration - SRE Exercise</name>
+    <version>0.0.-SNAPSHOT</version>
+    <name>Simple Online Exam Registration - SRE Exercise</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
