--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,12 +3,12 @@
 
 name: Build Project
 
-#on:
-#  push:
-#    branches: [ main ]
-#  pull_request:
-#    branches: [ main ]
-#  workflow_dispatch:
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
